--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,20 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A personal portfolio showcasing projects and skills"
     />
+    <meta name="keywords" content="portfolio, projects, developer" />
+    <meta name="author" content="Portfolio Owner" />
+    <link rel="canonical" href="https://example.com" />
+    <meta property="og:title" content="My Portfolio" />
+    <meta property="og:description" content="A personal portfolio showcasing projects and skills" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://example.com" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="My Portfolio" />
+    <meta name="twitter:description" content="A personal portfolio showcasing projects and skills" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo512.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>My Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
