--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#003366" />
     <meta
       name="description"
-      content="A personal portfolio showcasing projects and skills"
+      content="Consultoria especializada em Análise, Planejamento e Controle Financeiro e Administrativo. Transforme sua gestão com a APC Consultoria."
     />
-    <meta name="keywords" content="portfolio, projects, developer" />
-    <meta name="author" content="Portfolio Owner" />
-    <link rel="canonical" href="https://example.com" />
-    <meta property="og:title" content="My Portfolio" />
-    <meta property="og:description" content="A personal portfolio showcasing projects and skills" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://example.com" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="My Portfolio" />
-    <meta name="twitter:description" content="A personal portfolio showcasing projects and skills" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/logo512.png" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta
+      name="keywords"
+      content="consultoria, planejamento, financeiro, administrativo, análise, controle, APC"
+    />
+    <meta name="author" content="APC Consultoria" />
+    <link rel="canonical" href="https://apcconsultoria.com.br" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>My Portfolio</title>
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="APC Consultoria - Transforme a Gestão da Sua Empresa"
+    />
+    <meta
+      property="og:description"
+      content="Consultoria em Análise, Planejamento e Controle Financeiro e Administrativo."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://apcconsultoria.com.br" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="APC Consultoria" />
+    <meta
+      name="twitter:description"
+      content="Consultoria em Análise, Planejamento e Controle para sua empresa crescer com segurança."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo512.png" />
+
+    <!-- Favicons e ícones -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="48x48"
+      href="%PUBLIC_URL%/favicon-48x48.png"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <title>APC Consultoria</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript
+      >Você precisa ativar o JavaScript para visualizar este site.</noscript
+    >
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
